--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -150,6 +150,11 @@ a {
 	display: flex;
 	width: fit-content;
 	gap: 10px;
+	transition: transform .4s;
+}
+
+.cta:hover {
+	transform: scale(1.1);
 }
 
 .cta img {
