--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -160,3 +160,46 @@ a {
 .cta img {
 	width: 14px;
 }
+
+/************CAROUSEL****************/
+
+.swiper-container {
+	width: 100%;
+	height: 100vh;
+	box-sizing: border-box;
+	padding: 0;
+	margin-top: 40px;
+	border-radius: 15px;
+	position: relative;
+}
+
+.swiper-slide {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+
+.slide-content img {
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: contain;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+	color: white;
+	/* Ou la couleur de ton choix */
+	font-size: 20px;
+	/* Taille des flèches */
+	z-index: 10;
+	/* Assurer que les flèches soient au-dessus du contenu */
+}
+
+.swiper-button-next {
+	right: 10px;
+}
+
+.swiper-button-prev {
+	left: 10px;
+}
