--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -4,7 +4,6 @@ html {
   body {
     color: #322c2c;
     font-family: "Poppins", sans-serif;
-
     padding: 3%;
 
     .home {
@@ -67,6 +66,7 @@ html {
 
           .img_ophelie {
             width: 30%;
+            min-width: 360px;
             display: flex;
             justify-content: center;
             height: 100%;
@@ -400,6 +400,8 @@ html {
           display: flex;
           flex-direction: row;
           align-items: center;
+          justify-content: center;
+          flex-wrap: wrap;
           gap: 50px;
 
           a {
