--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -30,7 +30,7 @@ html {
               color: #322c2c;
               font-weight: 400;
               font-size: 20px;
-              transition: transform .4s;
+              transition: transform 0.4s;
             }
 
             a:hover {
@@ -45,7 +45,7 @@ html {
             gap: 50px;
 
             a {
-              transition: transform .4s;
+              transition: transform 0.4s;
               img {
                 width: 30px;
               }
@@ -134,11 +134,11 @@ html {
         }
 
         h4::after {
-          content: '';
+          content: "";
           display: block;
           width: 100%;
           height: 15px;
-          background-color: #E3FC87;
+          background-color: #e3fc87;
           position: absolute;
           bottom: 0;
           left: 0;
@@ -146,7 +146,7 @@ html {
         }
 
         .project {
-          background-color: #F9F3EF;
+          background-color: #f9f3ef;
           display: flex;
           flex-direction: row;
           align-items: flex-start;
@@ -354,7 +354,7 @@ html {
           position: relative;
 
           &::before {
-            content: '';
+            content: "";
             position: absolute;
             top: 0;
             left: 0;
@@ -381,11 +381,11 @@ html {
                 position: relative;
 
                 &::after {
-                  content: '';
+                  content: "";
                   display: block;
                   width: 100%;
                   height: 15px;
-                  background-color: #E3FC87;
+                  background-color: #e3fc87;
                   position: absolute;
                   bottom: 10px;
                   left: 0;
@@ -411,12 +411,12 @@ html {
             font-weight: 400;
             font-size: 18px;
             margin: 0;
-            color: #322C2C;
+            color: #322c2c;
             display: flex;
             flex-direction: row;
             align-items: center;
             gap: 10px;
-            transition: transform .4s;
+            transition: transform 0.4s;
 
             img {
               width: 30px;
